syntax = "proto3";

option csharp_namespace = "JC.Samples.Grpc.Api";

import "google/protobuf/empty.proto";

package todos;

// The todo service definition.
service Todos {
  // Deletes Todos.
  rpc DeleteTodos (google.protobuf.Empty) returns (google.protobuf.Empty);
  // Gets a collection of Todos.
  rpc GetTodos (TodoRequest) returns (TodoResponse);
}

// The request message containing the ID of the User to get Todos for.
message TodoRequest {
    int32 userId = 1;
}

// The response message containing the collection of Todos.
message TodoResponse {
    repeated Todo todos = 1;
}

// Represents a 'Todo' item.
message Todo {
    int32 id = 1;
    int32 userId = 2;
    string title = 3;
    bool completed = 4;
}